# snakeNoLibraries

./: CMakeLists.txt
include/: bufferedVector.h  console.h  font8x8_basic.h  randomNumbers.h  stringManipulation.h  types.h
sources/: console.cpp  main.cpp  mainRuntime.cpp  randomNumbers.cpp  stringManipulation.cpp
